cleans html fix sizing and layout issues

--- a/Style.css
+++ b/Style.css
@@ -3,22 +3,17 @@
     min-height: 100vh;
     width: 100%;
     background-image: url(./Images/DeKooning-Black-and-White.jpg);
-    
     background-position: center;
     background-size: 1280px
     
 }
 
-
-.h1 {
-    color:black;
-    font-family: 'Oswald', sans-serif;
-}
-
 #nav-toggle-button{
     background-image: url(./Images/kissclipart-interface-icon-menu-button-icon-setup-icon-30f996bc3eaff236.png);
 }
-
+.navbarwidth{
+    min-width: 500px;
+}
 .navbarmenu {
     text-align:right;
     color: rgb(18, 250, 173);
@@ -27,28 +22,37 @@
     
 }
 
-
-
-.ulcenter {
-    align-items: center;
-    text-align: center;
-}
-
-
-.pabout {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 200;
-    font-size: larger;
-    
-    float: left;
-    border-style: solid;
-    border-color: darkred;
-    border-width: 1px;
+.flex-container{
+    display: flex;
 }
 
 .backgroundcontainer {
     background-color: rgb(231, 207, 175);
     min-width: 1280px;
+}
+
+.h1 {
+    color:black;
+    font-family: 'Oswald', sans-serif;
+}
+
+.aboutmecard {
+    width:auto; 
+    margin-left: 20px; 
+    margin-right: 15px; 
+    margin-top: 15px; 
+    margin-bottom: 15px;
+    min-width: 450px;
+}
+
+.aboutmecardphoto {
+    float:left;
+    margin-right: 10px;
+}
+
+.ulcenter {
+    align-items: center;
+    text-align: center;
 }
 
 .box1 {
@@ -73,3 +77,4 @@
     border-width: 1px;
 
 }
+
